// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlockElement in development should render a warning 1`] = `
<span
  style={
    Object {
      "backgroundColor": "red",
      "color": "white",
    }
  }
>
  Unknown block node type.
</span>
`;

exports[`BlockElement in development should render a warning and the children 1`] = `
Array [
  <span
    style={
      Object {
        "backgroundColor": "red",
        "color": "white",
      }
    }
  >
    Unknown block node type.
  </span>,
  <p>
    Foo
  </p>,
]
`;

exports[`BlockElement in production should render null 1`] = `null`;

exports[`BlockElement in production should render the children 1`] = `
<p>
  Bar
</p>
`;
